--- a/BootStrap.Test/BootStrap.Test/BootStrap.Test.csproj
+++ b/BootStrap.Test/BootStrap.Test/BootStrap.Test.csproj
@@ -60,7 +60,7 @@
   <ItemGroup>
     <Content Include="html\Dropdown.html" />
     <Content Include="html\-webkit-overflow-scrolling.html" />
-    <Content Include="note\TextFile1.txt" />
+    <Content Include="note\common.txt" />
     <Content Include="res\css\bootstrap-theme.css" />
     <Content Include="res\css\bootstrap-theme.min.css" />
     <Content Include="res\css\bootstrap.css" />
