--- a/BootStrap.Test/BootStrap.Test/BootStrap.Test.csproj
+++ b/BootStrap.Test/BootStrap.Test/BootStrap.Test.csproj
@@ -66,16 +66,20 @@
     <Content Include="html\2\1跨设备组合定义.html" />
     <Content Include="html\2\4颜色.html" />
     <Content Include="html\2\5尺寸.html" />
+    <Content Include="html\2\6Alert.html" />
     <Content Include="note\common.txt" />
     <Content Include="res\css\bootstrap-theme.css" />
     <Content Include="res\css\bootstrap-theme.min.css" />
     <Content Include="res\css\bootstrap.css" />
     <Content Include="res\css\bootstrap.min.css" />
+    <Content Include="res\css\normalize.css" />
     <Content Include="res\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="res\js\bootstrap.js" />
     <Content Include="res\js\bootstrap.min.js" />
     <Content Include="res\js\bootstrap.test.js" />
     <Content Include="res\js\jquery-3.0.0.js" />
+    <Content Include="res\js\less.js" />
+    <Content Include="res\js\less.min.js" />
     <Content Include="res\js\npm.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -89,6 +93,79 @@
     <Content Include="res\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="res\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="res\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="res\less\.csscomb.json" />
+    <Content Include="res\less\.csslintrc" />
+    <Content Include="res\less\alerts.less" />
+    <Content Include="res\less\badges.less" />
+    <Content Include="res\less\bootstrap.less" />
+    <Content Include="res\less\breadcrumbs.less" />
+    <Content Include="res\less\button-groups.less" />
+    <Content Include="res\less\buttons.less" />
+    <Content Include="res\less\carousel.less" />
+    <Content Include="res\less\close.less" />
+    <Content Include="res\less\code.less" />
+    <Content Include="res\less\component-animations.less" />
+    <Content Include="res\less\dropdowns.less" />
+    <Content Include="res\less\forms.less" />
+    <Content Include="res\less\glyphicons.less" />
+    <Content Include="res\less\grid.less" />
+    <Content Include="res\less\input-groups.less" />
+    <Content Include="res\less\jumbotron.less" />
+    <Content Include="res\less\labels.less" />
+    <Content Include="res\less\list-group.less" />
+    <Content Include="res\less\media.less" />
+    <Content Include="res\less\mixins.less" />
+    <Content Include="res\less\mixins\alerts.less" />
+    <Content Include="res\less\mixins\background-variant.less" />
+    <Content Include="res\less\mixins\border-radius.less" />
+    <Content Include="res\less\mixins\buttons.less" />
+    <Content Include="res\less\mixins\center-block.less" />
+    <Content Include="res\less\mixins\clearfix.less" />
+    <Content Include="res\less\mixins\forms.less" />
+    <Content Include="res\less\mixins\gradients.less" />
+    <Content Include="res\less\mixins\grid-framework.less" />
+    <Content Include="res\less\mixins\grid.less" />
+    <Content Include="res\less\mixins\hide-text.less" />
+    <Content Include="res\less\mixins\image.less" />
+    <Content Include="res\less\mixins\labels.less" />
+    <Content Include="res\less\mixins\list-group.less" />
+    <Content Include="res\less\mixins\nav-divider.less" />
+    <Content Include="res\less\mixins\nav-vertical-align.less" />
+    <Content Include="res\less\mixins\opacity.less" />
+    <Content Include="res\less\mixins\pagination.less" />
+    <Content Include="res\less\mixins\panels.less" />
+    <Content Include="res\less\mixins\progress-bar.less" />
+    <Content Include="res\less\mixins\reset-filter.less" />
+    <Content Include="res\less\mixins\reset-text.less" />
+    <Content Include="res\less\mixins\resize.less" />
+    <Content Include="res\less\mixins\responsive-visibility.less" />
+    <Content Include="res\less\mixins\size.less" />
+    <Content Include="res\less\mixins\tab-focus.less" />
+    <Content Include="res\less\mixins\table-row.less" />
+    <Content Include="res\less\mixins\text-emphasis.less" />
+    <Content Include="res\less\mixins\text-overflow.less" />
+    <Content Include="res\less\mixins\vendor-prefixes.less" />
+    <Content Include="res\less\modals.less" />
+    <Content Include="res\less\navbar.less" />
+    <Content Include="res\less\navs.less" />
+    <Content Include="res\less\normalize.less" />
+    <Content Include="res\less\pager.less" />
+    <Content Include="res\less\pagination.less" />
+    <Content Include="res\less\panels.less" />
+    <Content Include="res\less\popovers.less" />
+    <Content Include="res\less\print.less" />
+    <Content Include="res\less\progress-bars.less" />
+    <Content Include="res\less\responsive-embed.less" />
+    <Content Include="res\less\responsive-utilities.less" />
+    <Content Include="res\less\scaffolding.less" />
+    <Content Include="res\less\tables.less" />
+    <Content Include="res\less\theme.less" />
+    <Content Include="res\less\thumbnails.less" />
+    <Content Include="res\less\tooltip.less" />
+    <Content Include="res\less\type.less" />
+    <Content Include="res\less\utilities.less" />
+    <Content Include="res\less\variables.less" />
+    <Content Include="res\less\wells.less" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
