--- a/BootStrap.Test/BootStrap.Test/BootStrap.Test.csproj
+++ b/BootStrap.Test/BootStrap.Test/BootStrap.Test.csproj
@@ -71,6 +71,8 @@
     <Content Include="html\3\5\1form.html" />
     <Content Include="html\3\5\2from.html" />
     <Content Include="html\3\5\3fromControl.html" />
+    <Content Include="html\4\1caret.html" />
+    <Content Include="html\4\2progress.html" />
     <Content Include="note\common.txt" />
     <Content Include="res\css\bootstrap-theme.css" />
     <Content Include="res\css\bootstrap-theme.min.css" />
